Swap out old auth
